--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,13 +60,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Light-slnt=0.ttf
+          weight: 300
+        - asset: assets/fonts/Inter-Medium-slnt=0.ttf
+          weight: 400
+  #  - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
